src/test/deca/syntax/invalid/test_parser_error_identifier.deca
// Description:
//    tests le parser pour des identificateurs
//
// Resultats:
//    Ligne 13 : Erreur de syntaxe
//    test_lex ne doit pas donner d'erreur
//
// Historique:
//    crée le 17/01/2022
//
// Interdit de commercer par un chiffre 

5toto
